<!--
  ~ Copyright 2020 Denis Shulakov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in
  ~ compliance with the License. You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License
  ~ is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
  ~ or implied. See the License for the specific language governing permissions and limitations under
  ~ the License.
  -->

<resources>
    <string name="app_name">what</string>

    <!--main activity-->
    <string name="main_menu_map">map</string>
    <string name="main_menu_feed">feed</string>
    <string name="main_menu_create">create</string>
    <string name="main_menu_profile">profile</string>

    <!--splash activity-->
    <string name="slogan_text1">Stop thinking how.</string>
    <string name="slogan_text2">Think what.</string>

    <!--login activity-->
    <string name="login_hint_email">email</string>
    <string name="login_hint_password">password</string>
    <string name="login_hint_username">username</string>
    <string name="login_new_user">New user?</string>
    <string name="login_login">Log In</string>
    <string name="login_have_account">Already have an account?</string>
    <string name="login_sign">Sign Up</string>
    <!--login activity error text-->
    <string name="login_error_email_invalid">Email invalid</string>
    <string name="login_error_password_invalid">At least 6 characters</string>
    <string name="login_error_username_empty">Enter username</string>

    <!--tutorial activity-->
    <string name="tutorial_skip">skip</string>
    <string name="tutorial_next">next</string>
    <string name="tutorial_done">Done</string>
    <string name="tutor_1_short">Create project</string>
    <string name="tutor_1_long">Find common problem that you can solve</string>
    <string name="tutor_2_short">Get support</string>
    <string name="tutor_2_long">Community helps useful projects</string>
    <string name="tutor_3_short">Make it real</string>
    <string name="tutor_3_long">Realize project with collected donations</string>

    <!--location select activity-->
    <string name="select_location_title">Select a location</string>

    <!--project done activity-->
    <string name="project_done">Project done!</string>
    <string name="project_done_congratulations">Your project 1234567890 completed monetization. Congratulations!</string>
    <string name="project_done_got_it">Got it!</string>

    <!--map fragment-->

    <!--feed fragment-->
    <string name="feed_no_active_projects">No active projects</string>
    <string name="feed_create_new">Create new</string>

    <!--create fragment-->
    <string name="create_write_title">Write title</string>
    <string name="create_add_description">Add description</string>
    <string name="create_enter_full_price_of_project">Enter full price of project</string>
    <string name="create_enter_your_investment">Enter your investment</string>
    <string name="create_project_yandex_wallet_number">Project Yandex wallet number</string>
    <string name="create_project_will_be_situated">Project will be situated...</string>
    <string name="create_uploading">Uploading...</string>
    <!--create fragment error text-->
    <string name="create_error_at_least_3">At least 3 chars</string>
    <string name="create_error_fill_amount">Fill amount</string>
    <string name="create_error_goal_bigger_invest">Goal must be bigger than invest</string>
    <string name="create_error_invest_smaller_goal">Invest must be smaller than goal</string>
    <string name="create_error_15_digits">Number consists from 15 digits</string>
    <string name="create_error_enter_location">Enter location</string>

    <!--profile fragment-->
    <string name="profile_my_active_projects">My active projects:</string>
    <string name="profile_my_finished_projects">My finished projects:</string>
    <string name="profile_no_active_projects">No active projects.</string>
    <string name="profile_no_finished_projects">No finished projects.</string>

    <!--project info fragment-->
    <string name="project_info_comments">Comments</string>
    <string name="project_info_add">Add</string>
    <string name="project_info_donate">Donate!</string>
    <string name="project_info_add_your">Write comment</string>

    <!--payment dialog-->
    <string name="payment_dialog_cancel">Cancel</string>
    <string name="payment_dialog_continue">CONTINUE</string>
    <string name="payment_dialog_title">Donation amount</string>
    <string name="payment_dialog_amount">Amount</string>

    <!--add image dialog in create project fragment-->
    <string name="dialog_add_new_photo">Add new photo</string>
    <string name="dialog_take_a_photo">Take a photo</string>
    <string name="dialog_open_from_gallery">Open from gallery</string>
    <string name="redact_image_change">Change image</string>
    <string name="redact_image_view_image">View image</string>
    <string name="redact_image_retake_a_photo">Retake a photo</string>
    <string name="redact_image_open_other">Open other</string>
    <string name="redact_image_delete_image">Delete image</string>

    <!--change avatar dialog in profile fragment-->
    <string name="profile_dialog_change_avatar">Change avatar</string>

</resources>