<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.What"
    tools:activity=".ui.LoginActivity"
    android:background="#FFFFFF"
    android:padding="20dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        style="@style/Widget.What.TextView.CustomFont.Logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="80dp"/>

    <LinearLayout
        android:id="@+id/inputs_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_user_id_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.What.TextInput.OutlinedBox"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_user_id_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_email"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.What.TextInput.OutlinedBox"
            app:passwordToggleEnabled="true"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:nextFocusDown="@id/login_login_button"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.What.TextInput.OutlinedBox"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_username"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.What.TextInput.OutlinedBox"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_email"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.What.TextInput.OutlinedBox"
            app:passwordToggleEnabled="true"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/login_sign_button"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/login_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp"
            android:gravity="end"
            android:visibility="gone">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.What.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/login_new_user"
                android:onClick="newUserClick"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_login_button"
                style="@style/Widget.What.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="6dp"
                android:text="@string/login_login"
                android:onClick="loginClick"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sign_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginVertical="20dp"
            android:visibility="visible">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.What.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/login_have_account"
                android:onClick="haveAccountClick"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_sign_button"
                style="@style/Widget.What.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="6dp"
                android:text="@string/login_sign"
                android:onClick="signClick"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>