<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Denis Shulakov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in
  ~ compliance with the License. You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License
  ~ is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
  ~ or implied. See the License for the specific language governing permissions and limitations under
  ~ the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:activity=".CreateProjectFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/image_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.What.TextInput.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_title_black_24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_edit_text"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/backgroundColor"
                        android:hint="@string/create_write_title"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:paddingHorizontal="5dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.What.TextInput.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_subject_black_24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description_edit_text"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/backgroundColor"
                        android:hint="@string/create_add_description"
                        android:inputType="textMultiLine"
                        android:paddingHorizontal="5dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.What.TextInput.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_monetization_on_black_24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/money_goal_edit_text"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/backgroundColor"
                        android:hint="@string/create_enter_full_price_of_project"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:paddingHorizontal="5dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.What.TextInput.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_attach_money_black_24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/money_investment_edit_text"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/backgroundColor"
                        android:hint="@string/create_enter_your_investment"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:paddingHorizontal="5dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.What.TextInput.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_account_balance_wallet_black_24dp"
                    app:counterMaxLength="16"
                    app:counterEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/money_wallet_edit_text"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/backgroundColor"
                        android:hint="@string/create_project_yandex_wallet_number"
                        android:inputType="number"
                        android:maxLines="1"
                        android:paddingHorizontal="5dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.What.TextInput.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_location_on_black_24dp"
                    android:focusable="false"
                    android:longClickable="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/location_edit_text"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:longClickable="false"
                        android:background="@color/backgroundColor"
                        android:hint="@string/create_project_will_be_situated"
                        android:inputType="none"
                        android:paddingHorizontal="5dp"
                        android:cursorVisible="false"/>

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_done_black_24dp"
        app:borderWidth="0dp" />

</FrameLayout>